<resources>
    <string name="app_name">HogarArte</string>
    <string name="text_title_login">Log in to continue</string>
    <string name="forgot_register">Create an account </string>

    <string name="log_in">Log in</string>
    <string name="text_password">Password</string>
    <string name="example_password">*********</string>
    <string name="text_email">Email address</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_firsname">Mayk Edison</string>
    <string name="example_lastname">Perez Arzapalo</string>

    <string name="text_title_form">Join the Hogar Arte community</string>
    <string name="label_pass_description">Must include a symbol or number and have at least 8 characters</string>
    <string name="label_description_birth">You need to be at least 18. Other people who use Hogar Arte won\'t see your birthday</string>
    <string name="email_address">Email address</string>
    <string name="firt_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="sign_description">or sign up with email</string>
    <string name="living_room">Living room</string>
    <string name="subtitle_form">Indoor fireplace, Smart TV, Netflix, Air conditioning</string>
    <string name="request_to_rent">Request to Rent</string>
    <string name="night">/ FAMILY</string>
    <string name="_4_96">4.96</string>
    <string name="_52">(52)</string>
    <string name="_900">S/.900</string>
    <string name="text_welcome">Welcome to Hogar Arte</string>

    <string name="text_dialog">Confirme su información</string>
    <string name="text_ok_dialog">Registrado Exitosamente !</string>
    <string name="text_info">Ingrese su información</string>

    <string name="save">SAVE</string>
    <string name="adress">Adress</string>
    <string name="area">Area</string>
    <string name="district">District</string>
    <string name="description">Description :</string>
    <string name="text_description">Indicate some additional information about your property</string>
    <string name="amount">Amount :</string>
    <string name="text_amount">Indicate the amount you want to rent</string>

</resources>